<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NJCNI</string>
    
    <string name="action_new">Create Doc</string>
    <string name="action_login">Login</string>
    <string name="action_share">Share</string>
    <string name="action_feed">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_more">More</string>
    
    <string name="action_drawer_open">Open Drawer</string>
    <string name="action_drawer_close">Close Drawer</string>
    
    <string name="hello_world">Hello world!</string>

</resources>
