<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:xici="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_edit"
        xici:showAsAction="always"
        android:title="@string/action_new"/>
    
    <item
        android:id="@+id/action_login"
        android:icon="@drawable/ic_action_accounts"
        xici:showAsAction="always"
        android:title="@string/action_login"/>
    
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_overflow"
        xici:showAsAction="always"
        android:title="@string/action_more">
        
        <menu>
            <item
		        android:id="@+id/action_share"
		        android:icon="@drawable/ic_action_share"
		        xici:showAsAction="ifRoom"
		        android:title="@string/action_share"/>
		    
		    <item
		        android:id="@+id/action_about"
		        android:icon="@drawable/ic_action_about"
		        xici:showAsAction="collapseActionView"
		        android:title="@string/action_about"/>
		    
		    <item
		        android:id="@+id/action_feed"
		        android:icon="@drawable/ic_action_help"
		        xici:showAsAction="ifRoom"
		        android:title="@string/action_feed"/>
		    
		    <item
		        android:id="@+id/action_logout"
		        android:icon="@drawable/ic_action_stop"
		        xici:showAsAction="ifRoom"
		        android:title="@string/action_logout"
		        android:visible="false"/>
        </menu>
        
    </item>
    
</menu>